--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ header, footer {
 a {
     text-decoration: none;
     color: white;
+    width: 100%;
 }
 
 p.text-footer {
@@ -142,11 +143,20 @@ table td {
 	color: #fff;
 }
 
+/* Edit table */
 .btn-edit {
     width: 60%;
 	background-color: #333399;
 	color: #fff;
 }
+
+/* Edit page */
+.btn-edit-page {
+    width: 100%;
+	background-color: #333399;
+	color: #fff;
+}
+
 
 .btn-delete {
     width: 60%;
