--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+/**
+ * @author           Bruno Dadario <brunof19d@gmail.com>
+ * @copyright        (c) 2020, Bruno Dadario. All Rights Reserved.
+ * @license          Lesser General Public License <http://www.gnu.org/copyleft/lesser.html>
+ */
+
 html *{
 	margin: 0;
 	padding: 0;
